<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>
    <groupId>eu.clarin.cmdi</groupId>
    <artifactId>vlo</artifactId>
    <name>Virtual Language Observatory</name>
    <packaging>pom</packaging>
    
    <!-- When updating the version number here, also update the version number
         in each module's pom.xml
    -->
    <version>4.8-SNAPSHOT</version>
    
    <description>Virtual Language Observatory (VLO) parent project</description>
    <organization>
        <name>CLARIN</name>
        <url>http://www.clarin.eu</url>
    </organization>

    <modules>
        <module>vlo-solr</module>
        <module>vlo-web-app</module>
        <module>vlo-importer</module>
        <module>vlo-commons</module>
        <module>vlo-vocabularies</module>
        <module>vlo-sitemap</module>
        <module>vlo-statistics</module>
        <module>vlo-distribution</module>
    </modules>

    <properties>
        <!-- VLO-mapping project version to obtain default mappings from at build time -->
        <vlo.mapping.version>1.3.2</vlo.mapping.version>
        
        <!-- Common runtime dependency versions -->
        <solr.version>8.2.0</solr.version>
        <slf4j.version>1.7.28</slf4j.version>
        <saxon.version>9.8.0-15</saxon.version>
        <jackson.version>2.10.0</jackson.version>
        <jackson.databind.version>${jackson.version}</jackson.databind.version>
        
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <netbeans.hint.license>gpl30</netbeans.hint.license>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>javancss-maven-plugin</artifactId>
                <version>2.1</version>
            </plugin>
        </plugins>
    </reporting>   
    <repositories>
        <repository>
            <id>CLARIN</id>
            <name>CLARIN Repository</name>
            <url>https://nexus.clarin.eu/content/repositories/Clarin</url>
        </repository>
        <repository>
            <id>CLARIN-Snapshot</id>
            <name>CLARIN Snapshot Repository</name>
            <url>https://nexus.clarin.eu/content/repositories/clarin-snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>sonatype-apache</id>
            <url>https://repository.apache.org/releases</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M3</version>
                    <configuration>
                        <systemPropertyVariables>
                            <java.security.egd>file:/dev/./urandom</java.security.egd>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>11</release>
                        <!--<compilerArgument>-Xlint:unchecked</compilerArgument>-->
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.2.3</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    
    <distributionManagement>
        <snapshotRepository>
            <id>CLARIN-Snapshot</id>
            <url>https://nexus.clarin.eu/content/repositories/clarin-snapshot</url>
        </snapshotRepository>
        <repository>
            <id>CLARIN</id>
            <url>https://nexus.clarin.eu/content/repositories/Clarin</url>
        </repository>
    </distributionManagement>
</project>
